# scatterbrain

./: .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  notes.md  reference.rst
docs/design/: user_stories.md
src/scatterbrain/: __init__.py  card.py  card_sample.json  note.py
tests/: conftest.py  test_card.py  test_dummy.py
