[tool.poetry]
name = "scatterbrain"
version = "0.1.0"
description = "Note taking and task management application."
license = "MIT"
authors = ["Raymond Lewis <raymond0256@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/raymond0256/scatterbrain"
repository = "https://github.com/raymond0256/scatterbrain"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.11.0"
pytest-mock = "^3.5.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
flake8-import-order = "^0.18.1"
mypy = "^0.800"
typeguard = "^2.10.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
sphinx = "^3.4.3"
sphinx-autodoc-typehints = "^1.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["scatterbrain"]
